# presidio-api

./: Dockerfile  README.md  pyproject.toml
presidio_app/: config.py  main.py
presidio_app/models/: analyzer.py  anonymizer.py
presidio_app/routes/: analyzer.py  api.py
tests/unit/routes/: test_analyzer.py
