[tool.poetry]
name = "presidio-app"
version = "0.1.0"
description = ""
authors = ["Gustavo Argote <gusmann@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
jinja2 = "^3.1.3"
httpx = "^0.27.0"
presidio-analyzer = "^2.2.354"
presidio-anonymizer = "^2.2.354"
presidio-image-redactor = "^0.0.52"
presidio-structured = "^0.0.1a0"
sentry-sdk = {extras = ["fastapi"], version = "^1.44.0", optional = true}

[tool.poetry.extras]
sentry = ["sentry-sdk"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
deptry = "^0.15.0"
pre-commit = "^3.7.0"
types-pyyaml = "^6.0.12.20240311"
python-semantic-release = "^9.3.1"
types-requests = "^2.31.0.20240311"
ruff = "^0.3.4"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.15"
mkdocs-jupyter = "^0.24.6"
mkdocs-literate-nav = "^0.6.1"
mkdocs-gen-files = "^0.5.0"
mkdocs-autorefs = "^1.0.1"
pymdown-extensions = "^10.7.1"
griffe = "^0.42.1"
griffe-fieldz = "^0.1.2"
mike = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
